--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -14,7 +14,7 @@
 
 - name: Upgrade distribution
   ansible.builtin.apt:
-    force_apt_get: true
+    update_cache: true
     upgrade: dist
 
 - name: Install or update base software
