act on http status

--- a/playbooks/roles/info-tor/tasks/bto.yaml
+++ b/playbooks/roles/info-tor/tasks/bto.yaml
@@ -3,7 +3,7 @@
   ansible.builtin.uri:
     url: "https://bridges.torproject.org/status?id={{ _hashed_fingerprint }}"
     return_content: yes
-    status_code: [200, 404]
+    status_code: [200, 404, 503]
   register: result
 
 - name: File results for bto
@@ -14,3 +14,4 @@
     line: "{{ ansible_facts.hostname }} {{ result.content | split('\n') | select('search', 'functional') | first | default('n/a n/a n/a') }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_bto"
     regex: "^{{ ansible_facts.hostname }} "
+  when: result.status == 200
