--- a/playbooks/roles/setup-snowflake/defaults/main.yaml
+++ b/playbooks/roles/setup-snowflake/defaults/main.yaml
@@ -1,5 +1,8 @@
 ---
+snowflake_repo_dir: /home/snowflake/repo
 snowflake_git_version: "HEAD"
+snowflake_patches:
+  - https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake/-/commit/ad79bfa13777ed820e6e9976bc8df413c5abe676.diff
 
 go_package: "golang-1.21"
 go_path: "/usr/lib/go-1.21/bin/go"
