--- a/playbooks/roles/info-snowflake/tasks/version.yaml
+++ b/playbooks/roles/info-snowflake/tasks/version.yaml
@@ -12,7 +12,7 @@
   become_user: snowflake
   changed_when: false
   check_mode: false
-  ansible.builtin.command: git describe # noqa: command-instead-of-module
+  ansible.builtin.command: git describe --always # noqa: command-instead-of-module
   args:
     chdir: /home/snowflake/repo
   register: _git_version
