--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -5,6 +5,11 @@
     state: directory
     mode: "0700"
 
+- name: Configure repository "backports"
+  ansible.builtin.apt_repository:
+    filename: "backports"
+    repo: "deb http://deb.debian.org/debian {{ ansible_facts.distribution_release }}-backports main"
+
 # https://www.debian.org/releases/bookworm/arm64/release-notes/ch-information.html#non-free-split
 - name: Configure apt hook for non-free firmware
   ansible.builtin.lineinfile:
