--- a/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
@@ -23,10 +23,12 @@
 - name: Clone or update snowflake repo
   become: true
   become_user: snowflake
+  vars:
+    _version: "{{ (ansible_facts.hostname in patched_systems and patch_base | length > 0) | ternary(patch_base, git_version) }}"
   ansible.builtin.git:
     repo: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake
     dest: /home/snowflake/repo
-    version: "{{ git_version }}"
+    version: "{{ _version }}"
     depth: 1
     force: true
 
