--- a/playbooks/roles/setup/tasks/validate.yaml
+++ b/playbooks/roles/setup/tasks/validate.yaml
@@ -4,3 +4,4 @@
     quiet: true
     that:
       - "(nickname_prefix + ansible_facts.hostname) | length <= 19"
+  when: '"private" in group_names or "public" in group_names'
