--- a/playbooks/roles/setup-tor/tasks/main.yaml
+++ b/playbooks/roles/setup-tor/tasks/main.yaml
@@ -2,6 +2,11 @@
 - name: Gather all facts
   ansible.builtin.setup:
 
+- name: Validate
+  ansible.builtin.import_tasks: validate.yaml
+  tags:
+    - validate
+
 - name: Main
   module_defaults:
     ansible.builtin.apt:
