--- a/playbooks/roles/info-tor/tasks/log-notice.yaml
+++ b/playbooks/roles/info-tor/tasks/log-notice.yaml
@@ -1,8 +1,9 @@
 ---
 - name: Get last {{ log_lines }} lines of {{ log_notice }}
   changed_when: false
-  ansible.builtin.shell: |
-    grep -v -e 'The IPv4 ORPort address 127.0.0.1 does not match the descriptor address' {{ log_notice }} | tail -n {{ log_lines }}
+  ansible.builtin.shell: >-
+    grep -h -v -e 'The IPv4 ORPort address 127.0.0.1 does not match the descriptor address' {{ log_notice }}.1 {{ log_notice }} 2>/dev/null |
+    tail -n {{ log_lines }}
   register: result
 
 - name: Results of log-notice {{ log_lines }} last lines
