--- a/playbooks/roles/info/defaults/main.yaml
+++ b/playbooks/roles/info/defaults/main.yaml
@@ -2,4 +2,4 @@
 log_lines: 10
 
 log_unattended: "/var/log/unattended-upgrades/unattended-upgrades-dpkg.log"
-log_system_since: "1 week ago"
+log_system_since: "3 days ago"
