--- a/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
@@ -13,52 +13,49 @@
     name: snowflake
 
 - name: Create Ansible tmp dir for user snowflake
-  become: true
-  become_user: snowflake
   ansible.builtin.file:
     path: /home/snowflake/.ansible/tmp
     state: directory
+    owner: snowflake
+    group: snowflake
     mode: "0700"
 
-- name: Clone or update snowflake repo
-  become: true
-  become_user: snowflake
-  vars:
-    _version: "{{ (ansible_facts.hostname in patched_systems and patch_base | length > 0) | ternary(patch_base, git_version) }}"
-  ansible.builtin.git:
-    repo: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake
-    dest: /home/snowflake/repo
-    version: "{{ _version }}"
-    depth: 1
-    force: true
-  register: __repo
+- name: Run as user snowflake
+  block:
+    become: true
+    become_user: snowflake
 
-- name: Apply patches
-  become: true
-  become_user: snowflake
-  ansible.builtin.shell: |
-    cd {{ repo_dir }}
-    curl -s {{ item }} | patch -p 1
-  loop_control:
-    label: "{{ item }}"
-  loop: "{{ patches }}"
-  when: ansible_facts.hostname in patched_systems
-  register: __patch
+    - name: Clone or update repo
+      vars:
+        _version: "{{ (ansible_facts.hostname in patched_systems and patch_base | length > 0) | ternary(patch_base, git_version) }}"
+      ansible.builtin.git:
+        repo: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake
+        dest: /home/snowflake/repo
+        version: "{{ _version }}"
+        depth: 1
+        force: true
+      register: __repo
 
-- name: Go get
-  become: true
-  become_user: snowflake
-  ansible.builtin.command: "{{ go_path }} get"
-  args:
-    chdir: "{{ repo_dir }}/proxy"
-  when: __repo.changed or __patch.changed
+    - name: Apply patches
+      ansible.builtin.shell: |
+        cd {{ repo_dir }}
+        curl -s {{ item }} | patch -p 1
+      loop_control:
+        label: "{{ item }}"
+      loop: "{{ patches }}"
+      when: ansible_facts.hostname in patched_systems
+      register: __patch
 
-- name: Go build
-  become: true
-  become_user: snowflake
-  ansible.builtin.command: "{{ go_path }} build"
-  args:
-    chdir: "{{ repo_dir }}/proxy"
+    - name: Go get
+      ansible.builtin.command: "{{ go_path }} get"
+      args:
+        chdir: "{{ repo_dir }}/proxy"
+      when: __repo.changed or __patch.changed
+
+    - name: Go build
+      ansible.builtin.command: "{{ go_path }} build"
+      args:
+        chdir: "{{ repo_dir }}/proxy"
 
 - name: Copy binary file to /usr/bin/
   ansible.builtin.copy:
