--- a/inventory/group_vars/snowflake.yaml
+++ b/inventory/group_vars/snowflake.yaml
@@ -1,3 +1,5 @@
 ---
-go_package: "golang-1.21"
-go_path: "/usr/lib/go-1.21/bin/go"
+snowflake_go_package: "golang-1.21"
+snowflake_go_path: "/usr/lib/go-1.21/bin/go"
+
+snowflake_repo_dir: "/home/snowflake/snowflake"
