--- a/playbooks/roles/info-snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info-snowflake/tasks/log-proxy.yaml
@@ -3,7 +3,7 @@
   changed_when: false
   ansible.builtin.shell: >-
     journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -q |
-    grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found'
+    grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found' -e ' Proxy connection closed'
   register: result
   failed_when: result.stderr_lines | length > 0
 
