set summary intervall to 1 min for Snowflake

--- a/playbooks/roles/info-snowflake/tasks/main.yaml
+++ b/playbooks/roles/info-snowflake/tasks/main.yaml
@@ -1,8 +1,8 @@
 ---
-- name: Clients
-  ansible.builtin.import_tasks: clients.yaml
+- name: Connections
+  ansible.builtin.import_tasks: connections.yaml
   tags:
-    - clients
+    - connections
 
 - name: Log proxy
   ansible.builtin.import_tasks: log-proxy.yaml
