introduce var snowflake_metrics_port

--- a/playbooks/roles/setup-snowflake/defaults/main.yaml
+++ b/playbooks/roles/setup-snowflake/defaults/main.yaml
@@ -1,9 +1,11 @@
 ---
+snowflake_git_version: "HEAD"
+
 snowflake_go_package: "golang"
 snowflake_go_path: "go"
-
-snowflake_git_version: "HEAD"
 
 snowflake_patch_base: ""
 snowflake_patches: []
 snowflake_patched_systems: []
+
+snowflake_metrics_port: 9999
