--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -33,6 +33,10 @@
       - ntp
       - unattended-upgrades
 
+- name: Install or update additional software
+  ansible.builtin.apt:
+    name: "{{ additional_software }}"
+
 - name: Configure auto upgrades
   ansible.builtin.copy:
     src: 20auto-upgrades
@@ -96,6 +100,7 @@
 
 - name: Get current running kernel version
   changed_when: false
+  check_mode: false
   ansible.builtin.shell: |
     uname -v | grep -Eo '(Debian .*) ' | awk '{ print $2 }'
     uname -r | cut -f 3 -d '-'
