--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -8,7 +8,6 @@
 - name: Log system
   ansible.builtin.import_tasks: log-system.yaml
   tags:
-    - log
     - log-system
 
 - name: Uname
@@ -19,5 +18,9 @@
 - name: Log unattended
   ansible.builtin.import_tasks: log-unattended.yaml
   tags:
-    - log
     - log-unattended
+
+- name: Metrics port
+  ansible.builtin.import_tasks: metrics-port.yaml
+  tags:
+    - metrics-port
