--- a/playbooks/roles/setup-tor/tasks/firewall.yaml
+++ b/playbooks/roles/setup-tor/tasks/firewall.yaml
@@ -12,7 +12,7 @@
     chain: INPUT
     protocol: tcp
     source: "{{ prometheus_server }}"
-    destination_port: "{{ tor_metrics_port }}"
+    destination_port: "{{ metrics_port }}"
     syn: match
     jump: ACCEPT
   when: prometheus_server is defined
