--- a/playbooks/roles/setup-tor/tasks/firewall.yaml
+++ b/playbooks/roles/setup-tor/tasks/firewall.yaml
@@ -15,7 +15,7 @@
     destination_port: "{{ metrics_port }}"
     syn: match
     jump: ACCEPT
-  when: prometheus_server is defined
+  when: (prometheus_server is defined) and (metrics_port is defined) and (metrics_port > 0) and (metrics_port < 2**16)
 
 - name: Save new iptables v4 state
   community.general.iptables_state:
