--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -40,3 +40,8 @@
       ansible.builtin.import_tasks: firewall.yaml
       tags:
         - firewall
+    - name: Prometheus node exporter
+      ansible.builtin.import_tasks: prometheus-node-exporter.yaml
+      tags:
+        - prometheus-node-exporter
+      when: (prometheus_server is defined) and (prometheus_node_exporter is true)
