--- a/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
@@ -32,7 +32,7 @@
     force: true
   register: __repo
 
-- name: Apply snowflake_patches
+- name: Apply snowflake patches
   become: true
   become_user: snowflake
   ansible.builtin.shell: |
