--- a/playbooks/roles/setup-snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/main.yaml
@@ -5,6 +5,7 @@
       autoclean: true
       autoremove: true
       cache_valid_time: 600
+      purge: true
       state: latest
     ansible.builtin.copy:
       owner: root
