--- a/playbooks/roles/setup-tor/tasks/main.yaml
+++ b/playbooks/roles/setup-tor/tasks/main.yaml
@@ -10,6 +10,7 @@
       autoclean: true
       autoremove: true
       cache_valid_time: 600
+      purge: true
       state: latest
     ansible.builtin.copy:
       owner: root
