install prometheus-node-exporter even if no remote Prometheus is defined (yet)

--- a/playbooks/roles/setup-snowflake/tasks/firewall.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/firewall.yaml
@@ -8,7 +8,7 @@
     jump: ACCEPT
 
 - name: Enable Prometheus to scrape metrics from Snowflake
-  when: (prometheus_server is defined) and (metrics_port is defined) and (metrics_port > 0) and (metrics_port < 2**16)
+  when: (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4) and (metrics_port is defined) and (metrics_port > 0) and (metrics_port < 2**16)
   block:
     - name: Allow Prometheus server to localhost
       ansible.builtin.iptables:
