--- a/playbooks/roles/setup-tor/tasks/firewall.yaml
+++ b/playbooks/roles/setup-tor/tasks/firewall.yaml
@@ -1,5 +1,6 @@
 ---
 - name: ACCEPT TCP to obfs4 port
+  when: (obfs4_port > 0) and (obfs4_port < 2**16)
   ansible.builtin.iptables:
     chain: INPUT
     protocol: tcp
@@ -8,6 +9,7 @@
     jump: ACCEPT
 
 - name: ACCEPT TCP from Prometheus server to metrics port
+  when: (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4) and (metrics_port is defined) and (metrics_port > 0) and (metrics_port < 2**16)
   ansible.builtin.iptables:
     chain: INPUT
     protocol: tcp
