--- a/playbooks/roles/setup/tasks/network.yaml
+++ b/playbooks/roles/setup/tasks/network.yaml
@@ -63,9 +63,14 @@
         table: nat
         flush: yes
     - name: DNAT incoming TCP v6 except obfs4 port
+      when: (obfs4_port is defined) and (obfs4_port > 0) and (obfs4_port < 2**16)
       ansible.builtin.iptables:
         protocol: tcp
         destination_ports: "1:{{ obfs4_port - 1 }},{{ obfs4_port + 1 }}:65535"
+    - name: DNAT incoming TCP v6
+      when: not ((obfs4_port is defined) and (obfs4_port > 0) and (obfs4_port < 2**16))
+      ansible.builtin.iptables:
+        protocol: tcp
     - name: DNAT incoming non-TCP v6
       ansible.builtin.iptables:
         protocol: "{{ item }}"
