--- a/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
@@ -79,8 +79,8 @@
     sysctl_set: true
 
 - name: Add unit systemd
-  ansible.builtin.copy:
-    src: snowflake-proxy.service
+  ansible.builtin.template:
+    src: snowflake-proxy.service.j2
     dest: /etc/systemd/system/snowflake-proxy.service
   register: __service
 
