--- a/playbooks/roles/setup-snowflake/tasks/firewall.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/firewall.yaml
@@ -8,9 +8,9 @@
     jump: ACCEPT
 
 - name: Enable Prometheus to scrape metrics from Snowflake
-  when: (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4) and (metrics_port is defined) and (metrics_port > 0) and (metrics_port < 2**16)
+  when: (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4) and (metrics_port is defined) and (metrics_port | int > 0) and (metrics_port | int < 2**16)
   block:
-    - name: Forward traffic of Prometheus server to localhost
+    - name: Preroute traffic of Prometheus server
       ansible.builtin.iptables:
         chain: PREROUTING
         table: nat
@@ -18,15 +18,15 @@
         source: "{{ prometheus_server }}"
         destination_port: "{{ metrics_port }}"
         jump: DNAT
-        to_destination: "127.0.0.1"
-    - name: Allow DNAT traffic from Prometheuserver to localhost
+        to_destination: "127.0.0.1:9999"
+    - name: Allow DNAT traffic from Prometheus server
       ansible.builtin.iptables:
         chain: INPUT
         protocol: tcp
         ctstate: DNAT
         source: "{{ prometheus_server }}"
         destination: "127.0.0.1"
-        destination_port: "{{ metrics_port }}"
+        destination_port: 9999
         jump: ACCEPT
     - name: Allow (pre-)routing to localhost
       ansible.posix.sysctl:
