--- a/playbooks/roles/setup-snowflake/tasks/firewall.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/firewall.yaml
@@ -7,7 +7,7 @@
     destination_ports: "32768:60999" # /proc/sys/net/ipv4/ip_local_port_range
     jump: ACCEPT
 
-- name: Enable Prometheus to scrape metrics from Snowflake
+- name: Enable Prometheus to scrape metrics
   when: (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4) and (metrics_port is defined) and (metrics_port | int > 0) and (metrics_port | int < 2**16)
   block:
     - name: Preroute traffic of Prometheus server
