--- a/playbooks/roles/setup/tasks/prometheus-node-exporter.yaml
+++ b/playbooks/roles/setup/tasks/prometheus-node-exporter.yaml
@@ -1,6 +1,6 @@
 ---
-- name: Allow Prometheus to reach metrics port
-  when: (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4)
+- name: Allow Prometheus to reach node exporter metrics port
+  when: (prometheus_node_exporter is true) and (prometheus_server is defined) and (prometheus_server is ansible.utils.ipv4)
   block:
     - name: ACCEPT TCP from Prometheus server to metrics port
       ansible.builtin.iptables:
@@ -23,7 +23,7 @@
       ansible.builtin.apt:
         name:
           - prometheus-node-exporter
-    - name: Configure Prometheus node exporter to listen to (filtered) ipv4 address only
+    - name: Configure Prometheus node exporter to listen only at ipv4:9100
       ansible.builtin.lineinfile:
         create: no
         line: 'ARGS="--web.listen-address={{ ansible_facts.default_ipv4.address }}:9100"'
