--- a/inventory/group_vars/private.yaml
+++ b/inventory/group_vars/private.yaml
@@ -1,4 +1,16 @@
 ---
+log_notice: "/var/log/tor/notice.log"
+log_warn: "/var/log/tor/warn.log"
+log_err: "/var/log/tor/err.log"
+
+torrc_generic:
+  - name: "Log notice file"
+    value: "{{ log_notice }}"
+  - name: "Log warn file"
+    value: "{{ log_warn }}"
+  - name: "Log err file"
+    value: "{{ log_err }}"
+
 torrc_private:
   - name: "PublishServerDescriptor"
     value: "0" # 1 when https://gitlab.torproject.org/tpo/core/tor/-/issues/40584 is solved
